[project]
name = "zfs-backup"
version = "0.1.0"
description = ""
authors = [
    {name = "violet",email = "github@violet-mica.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "paramiko (>=3.5.0,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
